# study-space

./: README.md
dio_fullstack_ai_python/bicicletaria_oop/: main.py
dio_fullstack_ai_python/sistema_bancario/: main.py
dio_fullstack_ai_python/sistema_bancario_funcs/: main.py
dio_fullstack_ai_python/sistema_bancario_oop/: main.py
dio_fullstack_ai_python/store_api_tdd/: pyproject.toml
dio_fullstack_ai_python/workout_api/: Makefile  alembic.ini  pyproject.toml
dio_fullstack_ai_python/workout_api/alembic/versions/: 3fad97e1d12c_init_db.py
dio_fullstack_ai_python/workout_api/workout_api/: main.py  routers.py
dio_fullstack_ai_python/workout_api/workout_api/atleta/: controller.py  models.py  schemas.py
dio_fullstack_ai_python/workout_api/workout_api/categorias/: controller.py  models.py  schemas.py
dio_fullstack_ai_python/workout_api/workout_api/centro_treinamento/: controller.py  models.py  schemas.py
dio_fullstack_ai_python/workout_api/workout_api/configs/: database.py  settings.py
dio_fullstack_ai_python/workout_api/workout_api/contrib/: models.py  schemas.py
extracao_anuncios/: README.md  requirements.txt
extracao_anuncios/app/: extrair_anuncios.py  timer_tasks.py
git_cheats/: git_cheats.md
