[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = "Projeto em FasAPI"
authors = ["Danilo Gansauskas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
